[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Examples for Tinkoff Invest API with Python https://github.com/Tinkoff/invest-python"
authors = ["Ruslan Kosarev <ruslan.kosarev@gmail.com>"]

[tool.poetry.scripts]
"candles" = "examples.candles:candles"
"market" = "examples.market:market"
"instrument" = "examples.instrument:instrument"

[tool.poetry.dependencies]
python = "^3.10"
tinkoff-investments = "^0.2.0-beta.33"
pydantic = "^1.9.1"
pandas = "^1.4.3"
python-dotenv = "^0.20.0"
click = "^8.1.3"
mypy = "^0.991"

